--- a/index.html
+++ b/index.html
@@ -307,9 +307,9 @@
               Lifelong learner started my career as an accountant and gained the
               business experience in retail, F&B and manufacturing then started
               following my passion with data by automating reports and designing
-              dashboards with Excel and Power BI and it didn`t stop here and dig
+              dashboards with Excel and Power BI and it didn`t stop here but dig
               deeper into Data Science and Machine Learning using both on-prem
-              and cloud solutions and enriched my knowledge in different areas
+              and cloud solutions and enriching my knowledge in different areas
               like DevOps, Distributed Systems, Linux, Kubernetes and
               Microservices.
             </p>
