change atos posision

--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
                 <i
                   class="fa fa-briefcase fa-fw w3-margin-right w3-large w3-text-black"
                 ></i
-                >BI Developer
+                >Data Architect
               </p>
               <p>
                 <i
@@ -697,7 +697,7 @@
             <!-- Current Work -->
             <div class="w3-container">
               <h5 class="w3-opacity">
-                <b>Senior Bi Developer / Atos - Nasr City, Cairo.</b>
+                <b>Data Architect / Atos - Nasr City, Cairo.</b>
               </h5>
               <h6 class="w3-text-black">
                 <i class="fa fa-calendar fa-fw w3-margin-right"></i>May 2021 -
