--- a/index.html
+++ b/index.html
@@ -350,14 +350,15 @@
               >Summary
             </h2>
             <p>
-              Lifelong learner started my career as an accountant and gained the
-              business experience in retail, F&B and manufacturing then started
-              following my passion with data by automating reports and designing
-              dashboards with Excel and Power BI and it didn`t stop here but dig
-              deeper into Data Science and Machine Learning using both on-prem
-              and cloud solutions and enriching my knowledge in different areas
-              like DevOps, Distributed Systems, Linux, Kubernetes and
-              Microservices.
+              Highly skilled and experienced data analyst with over 5 years of
+              experience in data analysis, data engineering, automation, cloud
+              computing, and machine learning. Strong technical skills,
+              including proficiency in Python, SQL, and data visualization tools
+              such as Tableau and Power BI. Proven track record of delivering
+              insights and solutions that drive business growth and improve
+              operational efficiency. Seeking a senior data analyst position at
+              a forward-thinking company that values data-driven decision making
+              and innovative technology.
             </p>
           </div>
 
@@ -514,33 +515,11 @@
                 >
               </h5>
               <h6 class="w3-text-black">
-                <i class="fa fa-calendar fa-fw w3-margin-right"></i>Dec 2015 -
+                <i class="fa fa-calendar fa-fw w3-margin-right"></i>May 2014 -
                 May 2018
               </h6>
             </div>
-
-            <!-- 6th Work -->
-            <div class="w3-container">
-              <h5 class="w3-opacity">
-                <b>Income Auditor / Master`s Food - Zmalek, Giza.</b>
-              </h5>
-              <h6 class="w3-text-black">
-                <i class="fa fa-calendar fa-fw w3-margin-right"></i>Feb 2015 -
-                Dec 2015
-              </h6>
-            </div>
-
-            <!-- 7th Work -->
-            <div class="w3-container">
-              <h5 class="w3-opacity">
-                <b>General Cashier / Master`s Food - Zmalek, Giza.</b>
-              </h5>
-              <h6 class="w3-text-black">
-                <i class="fa fa-calendar fa-fw w3-margin-right"></i>May 2014 -
-                Feb 2015
-              </h6>
-              <hr />
-            </div>
+            <hr />
 
             <!-- 8th Work -->
             <div class="w3-container">
@@ -695,7 +674,7 @@
                 <i class="fa fa-calendar fa-fw w3-margin-right"></i>Forever
               </h6>
               <p>
-                I have successfully completed more than 350 online courses at
+                Successfully completed more than 400 online courses at
                 <a href="https://www.udacity.com/" target="_blank">Udacity</a>,
                 <a href="https://learn.acloud.guru/" target="_blank"
                   >A Cloud Guru</a
