--- a/index.html
+++ b/index.html
@@ -353,12 +353,12 @@
               Highly skilled and experienced data analyst with over 5 years of
               experience in data analysis, data engineering, automation, cloud
               computing, and machine learning. Strong technical skills,
-              including proficiency in Python, SQL, and data visualization tools
-              such as Tableau and Power BI. Proven track record of delivering
-              insights and solutions that drive business growth and improve
-              operational efficiency. Seeking a senior data analyst position at
-              a forward-thinking company that values data-driven decision making
-              and innovative technology.
+              including proficiency in Python, SQL, Docker containers,
+              Kubernetes, and data visualization tools such as Tableau and Power
+              BI. Proven track record of delivering insights and solutions that
+              drive business growth and improve operational efficiency. Seeking
+              a senior data analyst position at a forward-thinking company that
+              values data-driven decision making and innovative technology.
             </p>
           </div>
 
