Updated skills and work experience

--- a/index.html
+++ b/index.html
@@ -187,13 +187,31 @@
                 ></i
                 >Data Engineering
               </p>
-              <p>Data ...</p>
+              <p>ETL (SSIS, Apache Airflow, PL SQL)</p>
               <div class="w3-light-grey w3-round-xlarge w3-small">
                 <div
                   class="w3-container w3-center w3-round-xlarge w3-black"
                   style="width: 90%"
                 >
                   90%
+                </div>
+              </div>
+              <p>NoSQL(Deltalake, MongoDB, Elasticsearch)</p>
+              <div class="w3-light-grey w3-round-xlarge w3-small">
+                <div
+                  class="w3-container w3-center w3-round-xlarge w3-black"
+                  style="width: 70%"
+                >
+                  70%
+                </div>
+              </div>
+              <p>Data Warehousing</p>
+              <div class="w3-light-grey w3-round-xlarge w3-small">
+                <div
+                  class="w3-container w3-center w3-round-xlarge w3-black"
+                  style="width: 60%"
+                >
+                  60%
                 </div>
               </div>
               <hr />
@@ -230,30 +248,31 @@
                 ></i
                 >Cloud Computing
               </p>
-              <p>Data ...</p>
+              <p>Microsoft Azure (Data Factory, Azure SQL, Azure Databricks)</p>
               <div class="w3-light-grey w3-round-xlarge w3-small">
                 <div
                   class="w3-container w3-center w3-round-xlarge w3-black"
                   style="width: 90%"
                 >
-                  90%
+                  70%
                 </div>
               </div>
-              <hr />
-
-              <p class="w3-large">
-                <i
-                  class="fa fa-code w3-margin-right w3-text-black w3-margin-top"
-                ></i
-                >Software Engineering
-              </p>
-              <p>Data ...</p>
+              <p>AWS (Redshift, Sagemaker, Lambda Functions)</p>
               <div class="w3-light-grey w3-round-xlarge w3-small">
                 <div
                   class="w3-container w3-center w3-round-xlarge w3-black"
                   style="width: 90%"
                 >
-                  90%
+                  60%
+                </div>
+              </div>
+              <p>GCP(Big Query, Dataflow, Cloud Composer)</p>
+              <div class="w3-light-grey w3-round-xlarge w3-small">
+                <div
+                  class="w3-container w3-center w3-round-xlarge w3-black"
+                  style="width: 90%"
+                >
+                  50%
                 </div>
               </div>
               <hr />
@@ -264,15 +283,36 @@
                 ></i
                 >DevOps
               </p>
-              <p>Data ...</p>
+              <p>Github Actions</p>
               <div class="w3-light-grey w3-round-xlarge w3-small">
                 <div
                   class="w3-container w3-center w3-round-xlarge w3-black"
-                  style="width: 90%"
+                  style="width: 70%"
                 >
-                  90%
+                  70%
                 </div>
               </div>
+
+              <p>Gitlab</p>
+              <div class="w3-light-grey w3-round-xlarge w3-small">
+                <div
+                  class="w3-container w3-center w3-round-xlarge w3-black"
+                  style="width: 60%"
+                >
+                  60%
+                </div>
+              </div>
+
+              <p>Jenkins</p>
+              <div class="w3-light-grey w3-round-xlarge w3-small">
+                <div
+                  class="w3-container w3-center w3-round-xlarge w3-black"
+                  style="width: 50%"
+                >
+                  50%
+                </div>
+              </div>
+
               <hr />
 
               <p class="w3-large">
@@ -280,15 +320,6 @@
                 >Programming
               </p>
 
-              <p>Cloud computing (Aws, Microsoft Azure)</p>
-              <div class="w3-light-grey w3-round-xlarge w3-small">
-                <div
-                  class="w3-container w3-center w3-round-xlarge w3-black"
-                  style="width: 60%"
-                >
-                  <div class="w3-center w3-text-white">60%</div>
-                </div>
-              </div>
               <p>Git & Github</p>
               <div class="w3-light-grey w3-round-xlarge w3-small">
                 <div
@@ -298,13 +329,31 @@
                   <div class="w3-center w3-text-white">70%</div>
                 </div>
               </div>
+              <p>C++</p>
+              <div class="w3-light-grey w3-round-xlarge w3-small">
+                <div
+                  class="w3-container w3-center w3-round-xlarge w3-black"
+                  style="width: 40%"
+                >
+                  <div class="w3-center w3-text-white">40%</div>
+                </div>
+              </div>
+              <p>Java</p>
+              <div class="w3-light-grey w3-round-xlarge w3-small">
+                <div
+                  class="w3-container w3-center w3-round-xlarge w3-black"
+                  style="width: 40%"
+                >
+                  <div class="w3-center w3-text-white">40%</div>
+                </div>
+              </div>
               <p>Web development (Javascript, JQuery, HTML, CSS, Flask)</p>
               <div class="w3-light-grey w3-round-xlarge w3-small">
                 <div
                   class="w3-container w3-center w3-round-xlarge w3-black"
-                  style="width: 70%"
+                  style="width: 50%"
                 >
-                  <div class="w3-center w3-text-white">70%</div>
+                  <div class="w3-center w3-text-white">50%</div>
                 </div>
               </div>
               <hr />
@@ -357,8 +406,9 @@
               Kubernetes, and data visualization tools such as Tableau and Power
               BI. Proven track record of delivering insights and solutions that
               drive business growth and improve operational efficiency. Seeking
-              a senior data analyst position at a forward-thinking company that
-              values data-driven decision making and innovative technology.
+              a senior Data Analyst or a Data Scientist position at a
+              forward-thinking company that values data-driven decision making
+              and innovative technology.
             </p>
           </div>
 
@@ -381,18 +431,25 @@
               </h6>
               <ul>
                 <li>
-                  Developed a new Desktop application for automating the daily
-                  routine tasks (Extracting reports from systems, data
-                  preprocessing and uploading to Sharepoint) which reduced the
-                  manual effort by 25%.
+                  Developed and maintaining a new desktop application for
+                  automating daily routine tasks, resulting in a 25% reduction
+                  in manual effort. Developed expertise in Python, PYQT6,
+                  Selenium, and Win32com API. Engaged with stakeholders to
+                  understand their needs and requirements, and designed and
+                  implemented a user-friendly and intuitive application.
                 </li>
                 <li>
-                  Maintaining multiple Power BI Dashboards for Pre-sales, Demand
-                  and Utilization, and Work in Progress Data.
+                  Act as the primary maintainer of multiple Power BI dashboards
+                  for Pre-sales, Demand and Utilization, and Work in Progress
+                  data. Ensure the accuracy and timeliness of the dashboards,
+                  and develop and implement best practices for data governance,
+                  quality, and security. Collaborat with cross-functional teams
+                  to integrate data and analytics into the business processes
+                  and systems.
                 </li>
                 <li>
-                  Support in Developing and maintaining Oracle SQL
-                  Datawarehouse.
+                  Support in the development and maintenance of an Oracle SQL
+                  Data Warehouse.
                 </li>
                 <li>
                   Support in Data Migration to AWS Redshift and GCP Big Query.
@@ -412,21 +469,40 @@
               </h6>
               <ul>
                 <li>
-                  Participate in the pre-sales activities as a technical lead
-                  for Enterprise BI and Data platforms projects.
+                  Served as the technical lead for pre-sales activities related
+                  to Enterprise BI and data platforms projects. Demonstrated
+                  technical expertise and deep understanding of the capabilities
+                  and value proposition of the solutions. Contributed to the
+                  successful acquisition of new clients and the expansion of
+                  existing relationships. Developed strong relationships with
+                  key stakeholders and partners.
                 </li>
                 <li>
-                  Implementing MongoDB as IaaS on microsoft Azure for different
-                  inveronments.
+                  Implemented MongoDB as Infrastructure-as-a-Service (IaaS) on
+                  Microsoft Azure, enabling the deployment of scalable and
+                  resilient databases for multiple environments. Improved the
+                  performance and reliability of the data storage and management
+                  systems, facilitating the development and deployment of
+                  applications and services. Developed expertise in Azure,
+                  MongoDB, and related technologies and tools.
                 </li>
-                <li>Implementing ECK (Elastic Stack on Kubernetes) on AKS.</li>
                 <li>
-                  Adding the authentication mechanism for python API wrapper
-                  with Microsft Azure.
+                  Built an ECK cluster (Elastic Cloud on Kubernetes) on AKS,
+                  enabling monitoring of application resources in Azure.
                 </li>
                 <li>
-                  Responsible for delerving reports and analysis services in
-                  Microsoft Practice Team.
+                  Updated a Python package to add authentication mechanisms with
+                  Azure, enabling secure access to on-premises and cloud
+                  resources. Improved the security of the system and facilitated
+                  seamless integration with Azure.
+                </li>
+                <li>
+                  Acted as the primary provider of reports and analysis services
+                  for the Microsoft Practice Team. Generated insightful and
+                  actionable analysis, contributing to the success of the team
+                  and the satisfaction of clients. Developed expertise in
+                  Microsoft tools and technologies, including Power BI, Excel,
+                  and SQL Server.
                 </li>
               </ul>
               <hr />
@@ -442,22 +518,29 @@
               </h6>
               <ul>
                 <li>
-                  Creating and maintaining (Sales, Finance, and HR) Dashboards
-                  using Power BI.
+                  Created and maintained a set of dashboards for Sales, Finance,
+                  and HR using Power BI, improving their accuracy, timeliness,
+                  and usability.
                 </li>
                 <li>
-                  Managed to automate the process of collecting budget, RE, and
-                  customers Target from the commercial team (Data provided in
-                  excel sheets) and split the target by Sales Office, Route,
-                  SKU, Day, Etc... using python and PostgreSQL.
+                  Managed the automation of the process of collecting budget,
+                  RE, and customers target from the commercial team using Python
+                  and PostgreSQL. Improved the accuracy, timeliness, and
+                  reliability of the data, and facilitated the analysis and
+                  reporting of the target by Sales Office, Route, SKU, Day, etc.
+                  Developed expertise in Python, SQL, and data management.
                 </li>
                 <li>
-                  Preparing a budget, RE, and Target template for upload to SAP
-                  Copa and SAC.
+                  Conducted data analysis and visualization to support
+                  decision-making and strategic planning. Developed and
+                  maintained documentation and standards for the process and the
+                  data. Improved the efficiency and productivity of the team,
+                  and contributed to the success of the organization.
                 </li>
                 <li>
-                  Preparing paginated reports for sales to be sent daily via
-                  Microsoft power automate.
+                  Prepared paginated reports for sales using Microsoft Power
+                  Automate, enabling the delivery of timely and accurate
+                  information to the sales team.
                 </li>
               </ul>
               <hr />
@@ -477,30 +560,34 @@
               </h6>
               <ul>
                 <li>
-                  Created a sales dashboard using Excel power query, DAX
+                  Created a sales dashboard using Excel Power Query, DAX
                   functions, and VBA to analyze and compare the performance of
-                  the company branches.
+                  the company branches. Facilitated the analysis and reporting
+                  of key performance indicators and trends.
                 </li>
                 <li>
-                  Created an excel sheet for commission calculation and
+                  Created an Excel sheet for commission calculation and
                   automated the process of gathering target, sales, and KPIs
-                  sheets using excel power query and excel advanced formulas.
+                  sheets using Excel Power Query and advanced formulas.
                 </li>
                 <li>
-                  Creating a SQL queries to extract sales transactions from the
-                  Microsoft Dynamics AX database.
+                  Developed a set of SQL queries to extract sales transactions
+                  from the Microsoft Dynamics AX database, enabling the analysis
+                  and reporting of key performance indicators and trends.
                 </li>
                 <li>
-                  Developed automated cheques issuing process through an excel
-                  sheet, that handles cheques printing for several banks.
+                  Developed an automated cheques issuing process through an
+                  Excel sheet, handling cheques printing for several banks.
                 </li>
                 <li>
-                  Designed new forms for all the documents in my department like
-                  (check cover, credit note, DAP, compensations).
+                  Improved the efficiency and accuracy of the process, and
+                  facilitated the reconciliation and tracking of the payments.
                 </li>
                 <li>
-                  Created a bank reconciliation sheet that automates the process
-                  with excel power query.
+                  Designed new forms for all the documents in my department,
+                  including check cover, credit note, and compensations.
+                  Improved the quality and consistency of the forms, and
+                  facilitated the processing and tracking of the documents.
                 </li>
               </ul>
               <hr />
@@ -579,8 +666,8 @@
                     Using Jenkins to build, test and deploy the application.
                   </li>
                   <li>
-                    Using rolling update strategy to update the web app with 0
-                    minute downtime.
+                    Using rolling update strategy to update the web app with
+                    zero minute downtime.
                   </li>
                 </ul>
                 <p>The technology used: Python, EKS, Jenkins, AWS.</p>
@@ -673,33 +760,48 @@
               <h6 class="w3-text-black">
                 <i class="fa fa-calendar fa-fw w3-margin-right"></i>Forever
               </h6>
-              <p>
-                Successfully completed more than 400 online courses at
-                <a href="https://www.udacity.com/" target="_blank">Udacity</a>,
-                <a href="https://learn.acloud.guru/" target="_blank"
-                  >A Cloud Guru</a
-                >,
-                <a href="https://www.coursera.org/" target="_blank">Coursera</a
-                >,
-                <a href="https://www.datacamp.com/" target="_blank">Datacamp</a
-                >,
-                <a href="https://www.pluralsight.com/" target="_blank"
-                  >Pluralsight</a
-                >,
-                <a
-                  href="https://www.linkedin.com/learning/?trk=nav_neptune_learning"
-                  target="_blank"
-                  >Linkedin Learning</a
-                >, and
-                <a href="https://www.udemy.com/" target="_blank">Udemy</a>
-                related to Data Science and Machine learning, <br />
-                And currently studying
-                <a
-                  href="https://www.datacamp.com/tracks/machine-learning-scientist-with-python"
-                  target="_blank"
-                  >Machine Learning Scientist with Python at DataCamp</a
-                >
-              </p>
+              <p></p>
+              <ul>
+                <li>
+                  Completed over 400 online courses in Data Science, Machine
+                  Learning, Programming, DevOps, WebDevelopment and Agile
+                  Methodologies from
+                  <a href="https://www.udacity.com/" target="_blank">Udacity</a
+                  >,
+                  <a
+                    href="https://customer-academy.databricks.com"
+                    target="_blank"
+                    >DataBricks</a
+                  >,
+                  <a href="https://learn.acloud.guru/" target="_blank"
+                    >A Cloud Guru</a
+                  >,
+                  <a href="https://www.coursera.org/" target="_blank"
+                    >Coursera</a
+                  >,
+                  <a href="https://www.datacamp.com/" target="_blank"
+                    >Datacamp</a
+                  >,
+                  <a href="https://www.pluralsight.com/" target="_blank"
+                    >Pluralsight</a
+                  >,
+                  <a
+                    href="https://www.linkedin.com/learning/?trk=nav_neptune_learning"
+                    target="_blank"
+                    >Linkedin Learning</a
+                  >, and
+                  <a href="https://www.udemy.com/" target="_blank">Udemy</a>
+                </li>
+                <li>
+                  Currently enrolled in
+                  <a
+                    href="https://www.coursera.org/specializations/data-mining"
+                    target="_blank"
+                    >Data Mining Specialization at Coursera</a
+                  >
+                </li>
+              </ul>
+
               <hr />
             </div>
 
