--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
                 <i
                   class="fa fa-phone fa-fw w3-margin-right w3-large w3-text-black"
                 ></i
-                >01096995535
+                >+201096995535
               </p>
               <p>
                 <i
@@ -183,7 +183,7 @@
 
               <p class="w3-large">
                 <i
-                  class="fas fa-database w3-margin-right w3-text-black w3-margin-top"
+                  class="fa fa-database w3-margin-right w3-text-black w3-margin-top"
                 ></i
                 >Data Engineering
               </p>
@@ -218,7 +218,7 @@
 
               <p class="w3-large">
                 <i
-                  class="fas fa-robot w3-margin-right w3-text-black w3-margin-top"
+                  class="fa fa-flask w3-margin-right w3-text-black w3-margin-top"
                 ></i
                 >Machine Learning
               </p>
