--- a/index.html
+++ b/index.html
@@ -524,7 +524,7 @@
                 </li>
                 <li>
                   Managed the automation of the process of collecting budget,
-                  RE, and customers target from the commercial team using Python
+                  RE, and customer targets from the commercial team using Python
                   and PostgreSQL. Improved the accuracy, timeliness, and
                   reliability of the data, and facilitated the analysis and
                   reporting of the target by Sales Office, Route, SKU, Day, etc.
@@ -576,8 +576,8 @@
                   and reporting of key performance indicators and trends.
                 </li>
                 <li>
-                  Developed an automated cheques issuing process through an
-                  Excel sheet, handling cheques printing for several banks.
+                  Developed an automated cheque-issuing process through an Excel
+                  sheet, handling cheque printing for several banks.
                 </li>
                 <li>
                   Improved the efficiency and accuracy of the process, and
@@ -585,7 +585,7 @@
                 </li>
                 <li>
                   Designed new forms for all the documents in my department,
-                  including check cover, credit note, and compensations.
+                  including check cover, credit notes, and compensations.
                   Improved the quality and consistency of the forms, and
                   facilitated the processing and tracking of the documents.
                 </li>
