Add IBM Data Science Professional Certificate

--- a/index.html
+++ b/index.html
@@ -812,6 +812,12 @@
               </h6>
               <div class="w3-half">
                 <a
+                  href="https://www.credly.com/badges/b5db1d4a-29fd-4455-acd1-c0829e8ca3d8/public_url"
+                  target="_blank"
+                  >Data Science Professional Certificate (V2) - Coursera</a
+                ><br />
+
+                <a
                   href="https://www.coursera.org/account/accomplishments/specialization/certificate/W37LRK7K9D5J"
                   target="_blank"
                   >Google Cloud Data Engineer Certificate - Coursera</a
