Update atos work experience

--- a/index.html
+++ b/index.html
@@ -461,7 +461,7 @@
             <!-- 2nd Work -->
             <div class="w3-container">
               <h5 class="w3-opacity">
-                <b>Data Architect / Atos - Nasr City, Cairo.</b>
+                <b>Data Scientist / Atos - Nasr City, Cairo.</b>
               </h5>
               <h6 class="w3-text-black">
                 <i class="fa fa-calendar fa-fw w3-margin-right"></i>May 2021 -
@@ -469,13 +469,22 @@
               </h6>
               <ul>
                 <li>
+                  Design and implement predictive models and machine learning
+                  algorithms using Python, Scikit-learn, and TensorFlow to solve
+                  business problems and generate insights.
+                </li>
+                <li>
+                  Deploy models to production using Docker containers and
+                  Kubernetes for seamless integration with the production
+                  environment.
+                </li>
+                <li>
                   Served as the technical lead for pre-sales activities related
                   to Enterprise BI and data platforms projects. Demonstrated
                   technical expertise and deep understanding of the capabilities
                   and value proposition of the solutions. Contributed to the
                   successful acquisition of new clients and the expansion of
-                  existing relationships. Developed strong relationships with
-                  key stakeholders and partners.
+                  existing relationships.
                 </li>
                 <li>
                   Implemented MongoDB as Infrastructure-as-a-Service (IaaS) on
@@ -1091,12 +1100,6 @@
       <a href="https://wa.me/201096995535?text=Hello" target="_blank"
         ><i class="fa fa-whatsapp w3-hover-opacity"></i
       ></a>
-      <p>
-        Coded by
-        <a href="https://github.com/ahmed-gharib89" target="_blank"
-          >Ahmed Gharib</a
-        >
-      </p>
     </footer>
   </body>
   <!-- <script>
