--- a/index.html
+++ b/index.html
@@ -399,16 +399,15 @@
               >Summary
             </h2>
             <p>
-              Highly skilled and experienced data analyst with over 5 years of
-              experience in data analysis, data engineering, automation, cloud
+              Highly skilled and experienced data professional with over 5 years
+              of experience in data science, data engineering, automation, cloud
               computing, and machine learning. Strong technical skills,
               including proficiency in Python, SQL, Docker containers,
               Kubernetes, and data visualization tools such as Tableau and Power
               BI. Proven track record of delivering insights and solutions that
               drive business growth and improve operational efficiency. Seeking
-              a senior Data Analyst or a Data Scientist position at a
-              forward-thinking company that values data-driven decision making
-              and innovative technology.
+              a Data Scientist position at a forward-thinking company that
+              values data-driven decision making and innovative technology.
             </p>
           </div>
 
